// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteNav when window width is above mobileBreakpoint styles when banner variant is not provided should render default site nav 1`] = `
.c3 {
  display: list-item;
  padding: 9px 15px;
}

.c4 {
  background: transparent;
  border: none;
  display: block;
  font-family: Circular-Book,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #3B302C;
  cursor: pointer;
  font-size: 1.1em;
  font-weight: 700;
  line-height: 1;
  opacity: 1;
  pointer-events: auto;
}

.c4::after {
  content: '';
  display: block;
  height: 3px;
  background: #C00404;
  margin-top: 1em;
  width: 0;
}

.c4:hover {
  color: #C00404;
}

.c4:hover::after {
  width: 100%;
}

.c5 {
  background: transparent;
  border: none;
  display: block;
  font-family: Circular-Book,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #C00404;
  cursor: pointer;
  font-size: 1.1em;
  font-weight: 700;
  line-height: 1;
  opacity: 1;
  pointer-events: auto;
}

.c5::after {
  content: '';
  display: block;
  height: 3px;
  background: #C00404;
  margin-top: 1em;
  width: 100%;
}

.c5:hover {
  color: #C00404;
}

.c5:hover::after {
  width: 100%;
}

.c6 {
  background: transparent;
  border: none;
  display: block;
  font-family: Circular-Book,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #3B302C;
  cursor: not-allowed;
  font-size: 1.1em;
  font-weight: 700;
  line-height: 1;
  opacity: 0.65;
  pointer-events: auto;
}

.c6::after {
  content: '';
  display: block;
  height: 3px;
  background: #C00404;
  margin-top: 1em;
  width: 0;
}

.c6:hover {
  color: #3B302C;
}

.c6:hover::after {
  width: 0;
}

.c2 {
  list-style: none;
  margin: 0;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  width: auto;
}

.c0 {
  background-color: #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 20px 0 30px;
}

@media (min-width:1200px) {
  .c4 {
    font-size: 1.2em;
  }
}

@media (min-width:1200px) {
  .c5 {
    font-size: 1.2em;
  }
}

@media (min-width:1200px) {
  .c6 {
    font-size: 1.2em;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <ul
      class="c2"
    >
      <li
        class="c3"
      >
        <button
          class="c4"
          color="red"
        >
          Link
        </button>
      </li>
      <li
        class="c3"
      >
        <button
          class="c5"
          color="red"
        >
          Active Link
        </button>
      </li>
      <li
        class="c3"
      >
        <button
          class="c6"
          color="red"
          disabled=""
        >
          Link
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`SiteNav when window width is above mobileBreakpoint styles when banner variant is provided should render default site nav with banner positioning 1`] = `
.c3 {
  display: list-item;
  padding: 9px 15px;
}

.c4 {
  background: transparent;
  border: none;
  display: block;
  font-family: Circular-Book,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #3B302C;
  cursor: pointer;
  font-size: 1.1em;
  font-weight: 700;
  line-height: 1;
  opacity: 1;
  pointer-events: auto;
}

.c4::after {
  content: '';
  display: block;
  height: 3px;
  background: #C00404;
  margin-top: 1em;
  width: 0;
}

.c4:hover {
  color: #C00404;
}

.c4:hover::after {
  width: 100%;
}

.c5 {
  background: transparent;
  border: none;
  display: block;
  font-family: Circular-Book,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #C00404;
  cursor: pointer;
  font-size: 1.1em;
  font-weight: 700;
  line-height: 1;
  opacity: 1;
  pointer-events: auto;
}

.c5::after {
  content: '';
  display: block;
  height: 3px;
  background: #C00404;
  margin-top: 1em;
  width: 100%;
}

.c5:hover {
  color: #C00404;
}

.c5:hover::after {
  width: 100%;
}

.c6 {
  background: transparent;
  border: none;
  display: block;
  font-family: Circular-Book,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #3B302C;
  cursor: not-allowed;
  font-size: 1.1em;
  font-weight: 700;
  line-height: 1;
  opacity: 0.65;
  pointer-events: auto;
}

.c6::after {
  content: '';
  display: block;
  height: 3px;
  background: #C00404;
  margin-top: 1em;
  width: 0;
}

.c6:hover {
  color: #3B302C;
}

.c6:hover::after {
  width: 0;
}

.c2 {
  list-style: none;
  margin: 0;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  width: auto;
}

.c0 {
  background-color: #FFFFFF;
  margin: 0 auto;
  margin-top: -50px;
  max-width: 1300px;
  position: relative;
  width: 96%;
  z-index: 10;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 20px 0 30px;
}

@media (min-width:1200px) {
  .c4 {
    font-size: 1.2em;
  }
}

@media (min-width:1200px) {
  .c5 {
    font-size: 1.2em;
  }
}

@media (min-width:1200px) {
  .c6 {
    font-size: 1.2em;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <ul
      class="c2"
    >
      <li
        class="c3"
      >
        <button
          class="c4"
          color="red"
        >
          Link
        </button>
      </li>
      <li
        class="c3"
      >
        <button
          class="c5"
          color="red"
        >
          Active Link
        </button>
      </li>
      <li
        class="c3"
      >
        <button
          class="c6"
          color="red"
          disabled=""
        >
          Link
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`SiteNav when window width is below mobileBreakpoint styles when banner variant is not provided should render mobile site nav 1`] = `
.c4 {
  background: transparent;
  border: none;
  cursor: inherit;
  display: inline-block;
  padding: 0 25px 7px 0;
}

.c5 {
  height: 3px;
  position: absolute;
  width: 25px;
  background-color: #C00404;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-duration: .22s;
  transition-duration: .22s;
  -webkit-transition-timing-function: cubic-bezier(0.55,0.055,0.675,0.19);
  transition-timing-function: cubic-bezier(0.55,0.055,0.675,0.19);
}

.c5.c5:before {
  height: 3px;
  position: absolute;
  width: 25px;
  background-color: #C00404;
  content: '';
  display: block;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-duration: .15s;
  transition-duration: .15s;
  -webkit-transition: top .1s .25s ease-in,opacity .1s ease-in;
  transition: top .1s .25s ease-in,opacity .1s ease-in;
  top: -7px;
}

.c5.c5:after {
  height: 3px;
  position: absolute;
  width: 25px;
  background-color: #C00404;
  content: '';
  display: block;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-duration: .15s;
  transition-duration: .15s;
  -webkit-transition: bottom .1s .25s ease-in,-webkit-transform .22s cubic-bezier(0.55,0.055,0.675,0.19);
  -webkit-transition: bottom .1s .25s ease-in,transform .22s cubic-bezier(0.55,0.055,0.675,0.19);
  transition: bottom .1s .25s ease-in,transform .22s cubic-bezier(0.55,0.055,0.675,0.19);
  bottom: -7px;
}

.c8 {
  display: list-item;
  border-top: 0.5px solid #C8C8C880;
  padding: 1rem 0;
}

.c9 {
  background: transparent;
  border: none;
  display: block;
  font-family: Circular-Book,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #C00404;
  cursor: pointer;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.c9:hover {
  color: #3B302C;
}

.c10 {
  background: transparent;
  border: none;
  display: block;
  font-family: Circular-Book,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #3B302C;
  cursor: pointer;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.c10:hover {
  color: #3B302C;
}

.c11 {
  background: transparent;
  border: none;
  display: block;
  font-family: Circular-Book,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #C00404;
  cursor: not-allowed;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 0.65;
  pointer-events: auto;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.c11:hover {
  color: #C00404;
}

.c7 {
  list-style: none;
  margin: 0;
  background-color: transparent;
  display: block;
  padding: 0;
  width: 100%;
}

.c0 {
  border: 1px solid #ddd;
}

.c1 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  font-size: 1em;
  padding: 1rem 0 1rem;
  width: 100%;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0 auto;
  width: 92%;
}

.c3 {
  color: #C00404;
  font-family: Circular-Bold,Circular-Book,Arial,Helvetica,sans-serif;
  font-weight: bold;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 11px 5px;
  text-transform: uppercase;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0 auto;
  padding: 16px 0;
  width: 92%;
  z-index: 10;
}

<div
  class=""
>
  <nav
    class="c0"
  >
    <button
      aria-controls="site-nav-mobile-collapse"
      aria-expanded="false"
      aria-label="Toggle site navigation"
      class="c1"
      type="button"
    >
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Site Navigation
        </span>
        <div
          class="c4"
        >
          <span
            class="c5"
          />
        </div>
      </div>
    </button>
    <div
      class="ReactCollapse--collapse"
      id="site-nav-mobile-collapse"
      style="overflow: hidden; height: 0px; display: none;"
    >
      <div
        class="ReactCollapse--content"
      >
        <div
          class="c6"
        >
          <ul
            class="c7"
          >
            <li
              class="c8"
            >
              <button
                class="c9"
                color="red"
              >
                Link
              </button>
            </li>
            <li
              class="c8"
            >
              <button
                class="c10"
                color="red"
              >
                Active Link
              </button>
            </li>
            <li
              class="c8"
            >
              <button
                class="c11"
                color="red"
                disabled=""
              >
                Link
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`SiteNav when window width is below mobileBreakpoint styles when banner variant is provided should render mobile site nav with banner positioning 1`] = `
.c5 {
  background: transparent;
  border: none;
  cursor: inherit;
  display: inline-block;
  padding: 0 25px 7px 0;
}

.c6 {
  height: 3px;
  position: absolute;
  width: 25px;
  background-color: #C00404;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-duration: .22s;
  transition-duration: .22s;
  -webkit-transition-timing-function: cubic-bezier(0.55,0.055,0.675,0.19);
  transition-timing-function: cubic-bezier(0.55,0.055,0.675,0.19);
}

.c6.c6:before {
  height: 3px;
  position: absolute;
  width: 25px;
  background-color: #C00404;
  content: '';
  display: block;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-duration: .15s;
  transition-duration: .15s;
  -webkit-transition: top .1s .25s ease-in,opacity .1s ease-in;
  transition: top .1s .25s ease-in,opacity .1s ease-in;
  top: -7px;
}

.c6.c6:after {
  height: 3px;
  position: absolute;
  width: 25px;
  background-color: #C00404;
  content: '';
  display: block;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-duration: .15s;
  transition-duration: .15s;
  -webkit-transition: bottom .1s .25s ease-in,-webkit-transform .22s cubic-bezier(0.55,0.055,0.675,0.19);
  -webkit-transition: bottom .1s .25s ease-in,transform .22s cubic-bezier(0.55,0.055,0.675,0.19);
  transition: bottom .1s .25s ease-in,transform .22s cubic-bezier(0.55,0.055,0.675,0.19);
  bottom: -7px;
}

.c9 {
  display: list-item;
  border-top: 0.5px solid #C8C8C880;
  padding: 1rem 0;
}

.c10 {
  background: transparent;
  border: none;
  display: block;
  font-family: Circular-Book,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #C00404;
  cursor: pointer;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.c10:hover {
  color: #3B302C;
}

.c11 {
  background: transparent;
  border: none;
  display: block;
  font-family: Circular-Book,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #3B302C;
  cursor: pointer;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.c11:hover {
  color: #3B302C;
}

.c12 {
  background: transparent;
  border: none;
  display: block;
  font-family: Circular-Book,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #C00404;
  cursor: not-allowed;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 0.65;
  pointer-events: auto;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.c12:hover {
  color: #C00404;
}

.c8 {
  list-style: none;
  margin: 0;
  background-color: transparent;
  display: block;
  padding: 0;
  width: 100%;
}

.c0 {
  background-color: #FFFFFF;
  margin: 0 auto;
  margin-top: 2rem;
  position: relative;
  width: 95%;
  z-index: 10;
}

.c1 {
  border: 1px solid #ddd;
}

.c2 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  font-size: 1em;
  padding: 1rem 0 1rem;
  width: 100%;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0 auto;
  width: 92%;
}

.c4 {
  color: #C00404;
  font-family: Circular-Bold,Circular-Book,Arial,Helvetica,sans-serif;
  font-weight: bold;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 11px 5px;
  text-transform: uppercase;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0 auto;
  padding: 16px 0;
  width: 92%;
  z-index: 10;
}

<div
  class="c0"
>
  <nav
    class="c1"
  >
    <button
      aria-controls="site-nav-mobile-collapse"
      aria-expanded="false"
      aria-label="Toggle site navigation"
      class="c2"
      type="button"
    >
      <div
        class="c3"
      >
        <span
          class="c4"
        >
          Site Navigation
        </span>
        <div
          class="c5"
        >
          <span
            class="c6"
          />
        </div>
      </div>
    </button>
    <div
      class="ReactCollapse--collapse"
      id="site-nav-mobile-collapse"
      style="overflow: hidden; height: 0px; display: none;"
    >
      <div
        class="ReactCollapse--content"
      >
        <div
          class="c7"
        >
          <ul
            class="c8"
          >
            <li
              class="c9"
            >
              <button
                class="c10"
                color="red"
              >
                Link
              </button>
            </li>
            <li
              class="c9"
            >
              <button
                class="c11"
                color="red"
              >
                Active Link
              </button>
            </li>
            <li
              class="c9"
            >
              <button
                class="c12"
                color="red"
                disabled=""
              >
                Link
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;
